--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       font-family: Palatino, serif;
       font-size: 16px;
       line-height: 28px;
-      background: #fff;
+      background: #000;
     }
 
     #front {
@@ -26,16 +26,7 @@
       left: 0;
       right: 0;
       z-index: 100;
-
-      background: rgb(96,96,96); /* Old browsers */
-      background: -moz-radial-gradient(center, ellipse cover,  rgba(96,96,96,1) 0%, rgba(20,20,20,1) 74%, rgba(14,14,14,1) 100%); /* FF3.6+ */
-      background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(96,96,96,1)), color-stop(74%,rgba(20,20,20,1)), color-stop(100%,rgba(14,14,14,1))); /* Chrome,Safari4+ */
-      background: -webkit-radial-gradient(center, ellipse cover,  rgba(96,96,96,1) 0%,rgba(20,20,20,1) 74%,rgba(14,14,14,1) 100%); /* Chrome10+,Safari5.1+ */
-      background: -o-radial-gradient(center, ellipse cover,  rgba(96,96,96,1) 0%,rgba(20,20,20,1) 74%,rgba(14,14,14,1) 100%); /* Opera 12+ */
-      background: -ms-radial-gradient(center, ellipse cover,  rgba(96,96,96,1) 0%,rgba(20,20,20,1) 74%,rgba(14,14,14,1) 100%); /* IE10+ */
-      background: radial-gradient(ellipse at center,  rgba(96,96,96,1) 0%,rgba(20,20,20,1) 74%,rgba(14,14,14,1) 100%); /* W3C */
-      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#606060', endColorstr='#0e0e0e',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
-      background: none;
+      background: #444;
     }
 
     #back {
@@ -45,6 +36,7 @@
       left: 0;
       right: 0;
       z-index: 101;
+      background: #444;
     }
     
     .box {
@@ -52,6 +44,9 @@
       color: #eee;
       padding: 0 28px;
       border-radius: 5px;
+      -webkit-box-shadow: 0 5px 30px rgba(0, 0, 0, .3);
+      -moz-box-shadow: 0 5px 30px rgba(0, 0, 0, .3);
+      box-shadow: 0 5px 30px rgba(0, 0, 0, .3);
     }
     .box a {
       color: #ccc;
@@ -109,7 +104,6 @@
       left: 50%;
       width: 0;
       height: 0;
-      background: #000;
     }
     
     label {
