and a classy border

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
       color: #999;
     }
     .box h1 {
+      border-bottom: 1px solid #333;
       margin: 28px 56px;
       font-size: 32px;
       line-height: 56px;
