--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
       margin: 28px 0;
       color: #999;
     }
+    .box form {
+      margin: 0 0 28px 0;
+    }
     .box h1 {
       border-bottom: 1px solid #333;
       margin: 28px 56px;
