fonts for windows people

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     html, body {
       height: 100%;
       margin: 0;
-      font-family: Palatino, serif;
+      font-family: Palatino, "Palatino Linotype", "Book Antiqua", serif;
       font-size: 16px;
       line-height: 28px;
       background: #000;
