fix decay, wind and ending

--- a/shaders/visualizer.glsl.html
+++ b/shaders/visualizer.glsl.html
@@ -121,7 +121,7 @@ void main() {
     force = vec2(1, 0);
   }
   else if (mode == 1) {
-    force = vec2(-.3, .7);
+    force = vec2(.35, .55);
   }
   // Rotation push
   else if (mode == 2) {
