use minified tquery

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
   <div id="holder"></div>
 
  
-  <script type="text/javascript" charset="utf-8" src="vendor/tquery-bundle.js"></script>
+  <script type="text/javascript" charset="utf-8" src="vendor/tquery-bundle.min.js"></script>
   <script type="text/javascript" charset="utf-8" src="vendor/ThreeBox.min.js"></script>
   <script type="text/javascript" charset="utf-8" src="vendor/ThreeRTT-tquery.min.js"></script>
   <script type="text/javascript" charset="utf-8" src="vendor/ThreeAudio-tquery.min.js"></script>
