--- a/shaders/fluid.glsl.html
+++ b/shaders/fluid.glsl.html
@@ -176,7 +176,7 @@ void main() {
   float p = sample.z;
   vec3 color = vec3(1.0, .5, 0) + vec3(-1.0, 0, 1.0) * sample.w;
 
-  gl_FragColor = vec4(p * color, alpha);
+  gl_FragColor = vec4(p * color * 1.6, alpha);
 }
 </script>
 
